# todo-app-benchmarks

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  run.sh
cmd/: connect_db.sh  run.sh
migrations/2022-10-11-160009_create_user_accounts/: up.sql
migrations/2022-10-11-160015_create_tasks/: up.sql
script/: 01_initialize.sql
src/: db.rs  lib.rs  main.rs  models.rs  protocols.rs  repositories.rs  routes.rs  schema.rs  utils.rs
src/adapter/: routes.rs
