[package]
name = "todo_app_benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8.0"
log = "0.4.0"
simplelog = "0.9.0"
dotenv = "0.15.0"
chrono = { version = "0.4.11", features = ["serde"] }
diesel = { version = "2.0.1", features = ["postgres", "chrono"] }
serde = { version = "1.0.45", features = ["derive"] }
serde_json = "^1.0.41"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
rand = "0.6"